hphp/hack/test/typecheck/aktuple/local_vs_nested.php.exp
File "local_vs_nested.php", line 11, characters 3-13:
  tuple-like-array(^(string))
File "local_vs_nested.php", line 17, characters 3-17:
  ^(tuple-like-array(^(int | string)))
File "local_vs_nested.php", line 18, characters 15-23:
Invalid argument (Typing[4110])
File "local_vs_nested.php", line 22, characters 22-27:
This is a string
File "local_vs_nested.php", line 14, characters 22-22:
It is incompatible with an int
